# software

./: CMakeLists.txt  ProfilePicture.qml  Sidebar.qml  applicationui.cpp  applicationui.h  main.qml  main1.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
